<?xml version="1.0"?>
<package format="2">
    <name>lidar_to_map</name>
    <version>0.0.0</version>
    <description>The lidar_to_map package</description>
    <maintainer email="mxwu@itri.org.tw">MingXuan Wu</maintainer>
    <license>ITRI</license>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>pcl_ros</depend>
    <depend>rosbag</depend>
    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
</package>
